# opencv-match

./: .editorconfig  Cargo.toml  README.md
.cargo/: config.toml
examples/: canny.rs  fast-gray-multi-matcher.rs  feature.rs  find-best-matches.rs  find_best_matches.rs  gray-match.rs  multi-matcher.rs  template-match.rs  template_match_test.rs  v2-template-match.rs
src/: convert.rs  desc.rs  lib.rs  matcher.rs  prelude.rs  scale.rs  template.rs
src/cv_convert/: README.md  mod.rs  with_opencv.rs  with_opencv_image.rs  with_opencv_ndarray.rs
src/fast_gray/: pyramid.rs
src/fast_gray/core/: internal.rs  mod.rs  model.rs  util.rs
src/gray/: mod.rs  multi.rs
src/gray/core/: internal.rs
src/template/: base.rs  mod.rs  multi.rs  nms.rs  pyramid.rs
src/template_v2/: mod.rs
src/v2/: mod.rs  model.rs  multi.rs
