[package]
name = "opencv-match"
version = "0.1.0"
description = "A Rust library that simplifies template matching with OpenCV"
authors = ["Preco Plusb <plusb21@gmail.com>"]
repository = "https://github.com/preco21/opencv-match"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
half = "2.7.1"
image = "0.25.9"
ndarray = { version = "0.17.2", features = ["rayon"] }
opencv = { version = "0.98.1", default-features = false, features = [
    "imgproc",
    "features2d",
    "photo",
    "calib3d",
] }
rayon = "1.11.0"
